fix for edge alignment

--- a/src/sass/app_2/_common/layout/header.scss
+++ b/src/sass/app_2/_common/layout/header.scss
@@ -134,13 +134,12 @@
         border-radius: 10px;
         color: $COLOR_WHITE;
         display: inline-block;
-        font-size: 0.9em;
+        font-size: 1.4rem;
         font-weight: normal;
         height: 20px;
-        line-height: 1.5;
-        margin-left: 0.6em;
+        line-height: 1.43;
+        margin-left: 0.8rem;
         text-align: center;
-        vertical-align: middle;
         width: 50px;
     }
     &__icon {
